k8s/demoapp/_k8s/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata: {name: redis}
spec:
  selector: {matchLabels: {app: redis}}
  replicas: 2
  template:
    metadata: {labels: {app: redis}}
    spec:
      containers:
      - name: redis
        image: reg.ntl.nc/formation/olivier:latest
        ports: [{containerPort: 6379}]
---
apiVersion: v1
kind: Service
metadata: {name: redis}
spec:
  selector: {app: redis}
  ports: [{protocol: TCP, port: 6379, targetPort: 6379}]
